# attention_tracking

./: .gitignore  CMakeLists.txt  README.md  cmake_command.sh  cmd  kinematic.py  main.cpp  mainlog.cpp  servolog.txt  test_serial.py
include/: head_neck_ctl.h  joystick.h  kinematic.h  serial.h  sprotocol.h  visual_servo.h
src/: joystick.cpp  serial.cpp  sprotocol.cpp  vergence_ctl.cpp  visual_servo.cpp
